--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@nextui-org/react": "^2.4.8",
     "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.59.15",
     "framer-motion": "^11.11.4",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
@@ -26,6 +28,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
+    "supabase": "^1.204.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
