--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "types":"npx supabase gen types --lang typescript --project-id elfajphhyhpaklixpnnn > src/app/utils/supabase/database.types.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
