--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
