--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ yarn-error.log*
 .env*.local
 
 # vercel
-.vercel
+.vercelw
 
 # typescript
 *.tsbuildinfo
@@ -37,4 +37,4 @@ next-env.d.ts
 
 # other
 plan.txt
-
+details.txt
