--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "types":"npx supabase gen types --lang typescript --project-id elfajphhyhpaklixpnnn > src/app/utils/supabase/database.types.ts"
+    "types": "npx supabase gen types --lang typescript --project-id elfajphhyhpaklixpnnn > src/app/utils/supabase/database.types.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@nextui-org/react": "^2.4.8",
     "@supabase/ssr": "^0.5.1",
@@ -22,14 +23,16 @@
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "supabase": "^1.204.3",
     "tailwindcss": "^3.4.1",
